# polkafoundry

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yaml  docker-compose.yml
bot/: .env.docker  .env.example  .gitignore  docker-compose.yml  index.js  package-lock.json  package.json
docker/: Dockerfile  build.sh  chachacha.docker-compose.yml  docker-compose.yaml  generator.sh  local.Dockerfile  parachain-local.docker-compose.yml  relaychain-local.Dockerfile  relaychain-local.docker-compose.yml  script.sh
node/: Cargo.toml
node/res/: halongbay.json  polkasmith.json  rococo-local.json
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: halongbay.rs  mod.rs  polkafoundry.rs  polkasmith.rs
pallets/author-inherent/: Cargo.toml
pallets/author-inherent/src/: lib.rs
pallets/bridge/: Cargo.toml
pallets/bridge-executor/: Cargo.toml
pallets/bridge-executor/src/: lib.rs
pallets/bridge/src/: lib.rs
pallets/charity/: Cargo.toml
pallets/charity/src/: lib.rs  tests.rs
pallets/crowdloan-reward/: Cargo.toml
pallets/crowdloan-reward/src/: lib.rs
pallets/crowdloan-rewards/: Cargo.toml
pallets/crowdloan-rewards/src/: lib.rs  mock.rs  tests.rs
pallets/custom-signatures/: Cargo.toml
pallets/polkafoundry-staking/: Cargo.toml
pallets/polkafoundry-staking/src/: benchmarking.rs  inflation.rs  lib.rs  mock.rs  slashing.rs  taylor_series.rs  testing_utils.rs  tests.rs
pallets/redkite/: Cargo.toml
pallets/redkite/src/: lib.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/src/: lib.rs
pallets/template/: Cargo.toml
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: elections.rs  lib.rs
runtime/ethereum/: Cargo.toml
runtime/ethereum/src/: lib.rs
runtime/halongbay/: Cargo.toml
runtime/halongbay/src/: constants.rs  lib.rs
runtime/halongbay/src/weights/: mod.rs
runtime/polkafoundry/: Cargo.toml
runtime/polkafoundry/src/: constants.rs  lib.rs
runtime/polkasmith/: Cargo.toml
runtime/polkasmith/src/: constants.rs  lib.rs
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: lib.rs
runtime/src/: lib.rs
scripts/: build.sh  generate-parachain-specs.sh
scripts/js/: accountIdToPubKey.js  calculateResourceId.js  dumpCrowdloan.js  evmToAccountId.js  evmToAddress.js  methodToUtf8.js  package.json
spec/: newpolka-custom.json  newpolka-spec.json
specs/chachacha/: genesis-state  genesis-wasm.wasm  halongbaySpec.json  rococo-chachacha.json
specs/halongbay-v1/: customSpec.json  docker-run.sh  genesis-state  genesis-wasm.wasm  halongbaySpec.json  rococo-local.json
swapery_bot/: .env.example  Dockerfile  docker-compose.yml  index.js
tests/: .eslintrc.json  package-lock.json  package.json  truffle-config.js
tests/contracts/: PolkafoundryERC20.sol  Storage.sol  WETH9.sol
tests/migrations/: 1_erc20_migration.js  2_uniswap.js  3_multicall.js  4_teaerc20.js
tests/scripts/: Client.json  Client.sol  getEthPrice.js
tests/specs/: polka-spec.json
tests/test/: balance.test.js  block.test.js  constants.js  contract-method.test.js  contract-precompiles.test.js  contract-uniswap.test.js  contract.test.js  filter-api.test.js  gas.test.js  nonce.test.js  pending-pool.test.js  revert-receipt.test.js  subscription.test.js  txpool.test.js  utils.js
tests/test-hardhat/: .env.example  Makefile  README.md  hardhat.config.js  package-lock.json  package.json
tests/test-hardhat/artifacts/contracts/Token.sol/: Token.dbg.json  Token.json
tests/test-hardhat/cache/: solidity-files-cache.json
tests/test-hardhat/scripts/: deploy.js
tests/test-hardhat/test/: test-token.js
tests/test-parachain/: index.ts  package-lock.json  package.json  tsconfig.json
tests/test-truffle/: .env.example  .eslintrc.json  .gitignore  cmd.txt  config.js  package-lock.json  package.json  truffle-config.js  utils.js
tests/test-truffle/contracts/: Incrementer.sol  Multicall.sol  TeaERC20.sol  WETH9.sol
tests/test-truffle/migrations/: 2_uniswap.js
tests/test-truffle/test/: constants.js  contract-method.test.js  contract-precompiles.test.js  contract-uniswap.test.js  contract.test.js  incrementer.test.js  migrations.test.js  multicall.test.js  pending-pool.test.js  polkafoundryERC20.test.js  storage.test.js  subscription.test.js  txpool.test.js  utils.js  weth9.test.js
tools/: .gitignore  config.json  package.json  polkasmith.json
