
[package]
authors = ['Polkafoundry']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://polkafoundry.com'
license = 'Unlicense'
name = 'polkafoundry'
repository = 'https://github.com/polkafoundry/newpolka/'
version = '0.0.1'

[[bin]]
name = 'polkafoundry'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

[dependencies]
jsonrpc-core = '15.1.0'
jsonrpc-pubsub = '15.1.0'
structopt = '0.3.8'
futures = { version = '0.3.4' }
log = '0.4.8'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
serde = { features = ['derive'], version = '1.0.119' }
hex-literal = '0.3.1'
hex = '0.4.3'
async-trait = { version = "0.1.48" }

# local dependencies
polkafoundry-runtime = { path = '../runtime/polkafoundry', version = '0.0.1', optional = true }
polkasmith-runtime = { path = '../runtime/polkasmith', version = '0.0.1', optional = true }
halongbay-runtime = { path = '../runtime/halongbay', version = '0.0.2', optional = true }
runtime-common = { path = '../runtime/common', version = '0.0.1' }

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-consensus-manual-seal = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-trie = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-storage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

fc-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fc-db = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
fc-mapping-sync = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }

frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.8"  }

cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.8' }
clap = { version = '2.33' }

polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }

pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
pallet-ethereum = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
orml-tokens = { path = '../pkfp/tokens' }
pkfp-oracle-rpc = { path = '../pkfp/oracle/rpc' }
pkfp-primitives = { path = '../pkfp/primitives' }

runtime-primitives = { path = '../primitives' }

[features]
default = [
    'halongbay'
]
polkafoundry = [
    'polkafoundry-runtime'
]
polkasmith = [
    'polkasmith-runtime'
]
halongbay = [
    'halongbay-runtime'
]

runtime-benchmarks = [
    'polkafoundry-runtime/runtime-benchmarks',
    'polkasmith-runtime/runtime-benchmarks',
    'halongbay-runtime/runtime-benchmarks',
]

