[package]
name = "charity"
version = "0.0.1"
edition = "2018"
authors = ["cyberliem  https://github.com/cyberliem"]
description = "A charitable organization that accepts donations and imbalances"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
    "pallet",
    "Assets",
    "tutorial",
    "recipe",
]
compatibility_version = "2.0.0"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '=2.0.0'

[dependencies]
serde = "1.0.102"

# Substrate packages

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }

[dev-dependencies]
# Substrate packages
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }

[features]
default = ['std']
std = [
    'pallet-balances/std',
    'frame-support/std',
    'frame-system/std',
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
]