[package]
name = "pallet-crowdloan-rewards"
version = "0.0.1"
authors = ["Tung <thanhtung6824@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.119" }

frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-treasury = { default-features = false, path = "../treasury" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-treasury/std',
    'pallet-utility/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std'
]
